git commit -m "first commit"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript",
+    "plugin:react-hooks/recommended",
+    "prettier"
+  ],
+  "plugins": ["prettier"],
+  "rules": {
+    "import/no-cycle": [2, { "maxDepth": 1 }],
+    "react/no-array-index-key": 0
+  }
 }
